plugins {
	id 'java-library'
	id 'org.springframework.boot' version '2.7.13'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

allprojects {
	group = 'likelion.univ'
	version = '0.0.1-SNAPSHOT'

	java {
		sourceCompatibility = 17
		targetCompatibility = 17
	}
	repositories {
		mavenCentral()
	}
	dependencies {
//		implementation 'org.springframework.boot:spring-boot-starter'
//		annotationProcessor('org.springframework.boot:spring-boot-configuration-processor:3.0.4')
	}
}

repositories {
	mavenCentral()
}
tasks.named('test') {
	useJUnitPlatform()
}

/* subprojects의 내용은 하위 모듈에 모두 적용하는 설정 */
subprojects {
	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}
	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
		annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
	}
	test {
		useJUnitPlatform()
	}
}
bootJar {
	enabled = false
}

